@@ -1,5 +1,10 @@
 Sun Jul 26 13:06:12 1998  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
 
+	* implement.h (_pthread_new_thread_entry): Fix prototype.
+	(_pthread_find_thread_entry): Ditto.
+	(_pthread_delete_thread_entry): Ditto.
+	(_pthread_exit): Add prototype.
+
 	* exit.c (_pthread_exit): New function. Called from pthread_exit()
 	and _pthread_start_call() to exit the thread. It allows an extra
 	argument which is the return code passed to _endthreadex().
